# credit-risk-platform

./: README.md
dbt/: pyproject.toml
dbt/credit_risk_dbt/: dbt_project.yml  packages.yml
dbt/credit_risk_dbt/macros/: emp_length_to_years.sql  fico_midpoint.sql  parse_month_year.sql  parse_percentage.sql
dbt/credit_risk_dbt/models/sources/: raw_tables.yml
dbt/credit_risk_dbt/models/staging/: staging.yml  staging_accounts.sql  staging_balances.sql  staging_borrower.sql  staging_credit_history.sql  staging_dates.sql  staging_delinquency.sql  staging_hardship.sql  staging_loan_core.sql  staging_payments.sql  staging_secondary_applicant.sql
dbt/credit_risk_dbt/models/staging/utilities/: dim_calendar.sql
dbt/profiles/: .user.yml  profiles.yml
ingestion/: cli.py  config.yaml  loader.py
schemas/: accepted_loans_schema.py  loan_status_2007_2023.py  rejected_loans_schema.py
terraform/: main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
